<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.ahmedadeltito.photoeditor.PhotoEditorActivity">

    <com.ahmedadeltito.photoeditor.widget.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoDragView="@+id/dragView"
        app:umanoOverlay="true"
        app:umanoShadowHeight="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/parent_image_rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/photo_edit_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop" />

                <com.ahmedadeltito.photoeditorsdk.BrushDrawingView
                    android:id="@+id/drawing_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/photo_edit_iv"
                    android:layout_alignBottom="@+id/photo_edit_iv"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:id="@+id/top_shadow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/fading_shadow" />

            <ImageView
                android:id="@+id/erase_drawing_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_toStartOf="@+id/brush_drawing_img"
                android:layout_toLeftOf="@+id/brush_drawing_img"
                android:background="@drawable/rounded_border"
                android:src="@drawable/ic_eraser"
                android:text="@string/erase"
                android:textColor="#FFFFFF"
                android:tint="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/brush_drawing_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_border"
                android:src="@drawable/ic_brush"
                android:text="@string/erase"
                android:textColor="#FFFFFF"
                android:tint="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />

            <RelativeLayout
                android:id="@+id/top_parent_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/top_shadow"
                android:layout_alignBottom="@+id/top_shadow"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/close_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/ic_close"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/save_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/close_tv"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="7dp"
                    android:text="@string/ic_save"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/save_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/save_tv"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/add_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:padding="15dp"
                    android:text="@string/ic_text"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_pencil_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_text_tv"
                    android:padding="15dp"
                    android:text="@string/ic_draw"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_image_emoji_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_pencil_tv"
                    android:padding="15dp"
                    android:text="@string/ic_images"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_crop_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_image_emoji_tv"
                    android:layout_toLeftOf="@+id/add_image_emoji_tv"
                    android:padding="15dp"
                    android:text="@string/ic_crop"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/change_background_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_crop_tv"
                    android:layout_toLeftOf="@+id/add_crop_tv"
                    android:padding="15dp"
                    android:text="@string/ic_fill_color"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/undo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_parent_rl"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="7dp"
                    android:text="@string/ic_clear_all"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/clear_all_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/undo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="7dp"
                    android:text="@string/ic_clear_all"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/undo_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/undo"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/bottom_parent_rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/messageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C8000000"
                    android:backgroundTint="#C8000000"
                    android:hint="Type message..."
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="84dp"
                    android:paddingRight="84dp"
                    android:paddingBottom="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:textSize="19sp" />

                <RelativeLayout
                    android:id="@+id/delete_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/messageText"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/delete_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_border_text_view"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/ic_delete"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                </RelativeLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/go_to_next_screen_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/messageText"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-26dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:elevation="5dp"
                    android:src="@drawable/ic_arrow_right"
                    tools:visibility="visible"/>

            </RelativeLayout>

            <com.ahmedadeltito.photoeditor.widget.VerticalSlideColorPicker
                android:id="@+id/main_color_picker"
                android:layout_width="24dp"
                android:layout_height="260dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                app:borderColor="@android:color/transparent"
                app:borderWidth="8dp"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/done_drawing_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/save"
                android:elevation="5dp"
                android:src="@drawable/ic_check"
                android:visibility="gone"
                tools:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/image_emoji_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ahmedadeltito.photoeditor.widget.RealtimeBlurView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:realtimeBlurRadius="10dp"
                app:realtimeOverlayColor="#33ffffff" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/image_emoji_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image_emoji_indicator" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/image_emoji_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                app:fillColor="#999999"
                app:pageColor="#e7e7e7" />

        </RelativeLayout>

    </com.ahmedadeltito.photoeditor.widget.SlidingUpPanelLayout>

</RelativeLayout>
