<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">

    <EditText
        android:id="@+id/add_text_edit_text"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:hint="Type status..."
        android:inputType="textMultiLine"
        android:textColorHint="#5A5A5A"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/fading_shadow"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="16dp"
            android:background="?actionBarItemBackground"
            android:src="@drawable/ic_arrow_left"
            android:text="@string/undo" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/change_text_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:textAlignment="gravity"
            android:padding="10dp"
            android:layout_marginTop="-5.5dp"
            android:layout_marginRight="5.5dp"
            android:text="@string/add_text_btn"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />
    </LinearLayout>

    <com.ahmedadeltito.photoeditor.widget.VerticalSlideColorPicker
        android:id="@+id/color_picker_vertical"
        android:layout_width="24dp"
        android:layout_height="260dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:borderColor="@android:color/transparent"
        app:borderWidth="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        android:elevation="5dp"
        android:src="@drawable/ic_check" />

</RelativeLayout>